shift trade - Correct time line calc and stripe dayoff

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/ScheduleStyles.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/ScheduleStyles.css
@@ -43,3 +43,7 @@
 			transparent 60%, 
 			transparent 100%)*/
 }
+.request-body-inner .striped
+{
+	background-image: url(../Images/stripe.png);
+}
